--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,5 @@
 # https://www.playframework.com/documentation/latest/Configuration
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+mongodb {
+  uri = "mongodb://localhost:27017/jonny-webapp"
+}
